--- a/_posts/2016-09-07-godutch.md
+++ b/_posts/2016-09-07-godutch.md
@@ -1,85 +1,70 @@
-# [A형총무의 더치페이앱 - 여행정산,엔빵,더치페이계산기](https://enoosoft.blogspot.com/2021/08/a.html) 
+---
+layout: single
+title:  "A형총무의 더치페이앱 - 여행정산,엔빵,더치페이계산기"
+---
 
-[![img](https://blogger.googleusercontent.com/img/a/AVvXsEhSrrHSiirryNFCNJs6SRxqzmCNRXlE-uAM2cC5WtNFPPVfPJBxgR7KFvxeS_lfC9y7kKYpwiFHVwCOWQ8oBWKA93PL6jtslzP-u1i4bsCHqDO7kHa-oP41MMmSLfpvJPWEcKtFjkqINmVU6TzqSw-xFEwK77kadsq8LV4VdroosE4trteMBwQsssWd=w200-h200)](https://blogger.googleusercontent.com/img/a/AVvXsEhSrrHSiirryNFCNJs6SRxqzmCNRXlE-uAM2cC5WtNFPPVfPJBxgR7KFvxeS_lfC9y7kKYpwiFHVwCOWQ8oBWKA93PL6jtslzP-u1i4bsCHqDO7kHa-oP41MMmSLfpvJPWEcKtFjkqINmVU6TzqSw-xFEwK77kadsq8LV4VdroosE4trteMBwQsssWd=s360)
+# A형총무의 더치페이앱 - 여행정산,엔빵,더치페이계산기
 
-**출시일**
-
-2016.09.07
-
-**
-**
-
-**설치수**
-
-20,000+
-
-**
-**
-
-**주요사용기술**
-
-Android, Java-Kotlin Hybrid, Firebase RTDB
-
-**
-**
-
-**플레이스토어**
-
-[Google Play Store](https://play.google.com/store/apps/details?id=com.enoo.godutch)
+![포스터](https://play-lh.googleusercontent.com/ecM3LBP5MaANTjb0lZKMWw2p5mfA-ZKLn8v4eyIMoMIdcuynoiEsd5Ep7iU4vO03Nis=s180-rw)
 
 
 
-**주요기능**
+
+
+![img](https://play-lh.googleusercontent.com/vvo0Z5mHKuGEDYq36jVWEFFQUs7465IrLRziJ_MoxFS_AiEM8UWEUcLHGILvUM-dH58=w720-h310-rw)
+
+![스크린샷 이미지](https://play-lh.googleusercontent.com/SMfWBqyzrpx7XJKKDe7zMnLjU_wKdoyu1kj9cLnUsz_USHKSXJ-8KOEVuJ0ar4UlUgQM=w720-h310-rw)![스크린샷 이미지](https://play-lh.googleusercontent.com/ZrO2xZb36eIuu-IuSDbRDNc3qgNYQr90TYtD-sq7XmXCxAUyeU2FAls3lxJH1U27vyhJ=w720-h310-rw)![스크린샷 이미지](https://play-lh.googleusercontent.com/Xd-LeD0NtTgMAtiFErPRz_f_9IrK8H_3v-fi8NrbvkdyGrQsgxHypIYqjjUCj6kwGns=w720-h310-rw)![스크린샷 이미지](https://play-lh.googleusercontent.com/Fu1kXY-ZaXRkt0_heBQ3HflFi6FcRgk1R7fG0MsFZTRzx7jtgr-3gUlxWr2V8_TgI40=w720-h310-rw)![스크린샷 이미지](https://play-lh.googleusercontent.com/FRf_HORLME-QaHtw7KYKTaCL3iTYJrXirRCiskmo5qCdaSShc5-g3xb_dsbwhliIqtI=w720-h310-rw)
+
+## 
+
+이 앱을 총무님들께 바칩니다♡
 
 [A형총무의 더치페이앱-엔빵앱,N빵,갹출,여행정산,추렴]
 
-\1. 멤버수 무제한 추가
-\2. 멤버별 가중치 기능
-\3. 결제내역 무제한 등록
-\4. 절사/올림단위 설정
-\5. 더치페이결과메시지 수정/공유
-\6. 입력정보 자동저장/초기화 가능
-\7. 그룹별 정산내역 관리기능
-\8. 총무지정/정산완료기능
+1. 멤버수 무제한 추가
+2. 멤버별 가중치 기능
+3. 결제내역 무제한 등록
+4. 절사/올림단위 설정
+5. 더치페이결과메시지 수정/공유
+6. 입력정보 자동저장/초기화 가능
+7. 그룹별 정산내역 관리기능
+8. 총무지정/정산완료기능
 
 [A형총무의 더치페이앱 사용방법]
 
-\1. 정산할 멤버를 입력한다
-\- 스페이스로 구분하여 여러명 입력
-\- 총무지정 /정산완료 설정 가능
-\- 필요시 멤버별로 분담률 가중치 입력
+1. 정산할 멤버를 입력한다
 
-\2. 결제내역을 입력한다
-\- 결제자, 장소, 금액 입력 후 참석 멤버체크
-\- 총무 미지정시 결제금액이 많은 사람이 자동으로 총무가 됨
+   - 스페이스로 구분하여 여러명 입력
 
-\3. 총무계좌번호를 입력한다
-\- 총무는 오직 한명, 낼 돈을 총무에게 몰아줌
-\- 받을 돈이 있는 사람은 총무에게 환급받음
+   - 총무지정 /정산완료 설정 가능
 
-\4. 더치페이 결과를 확인한다
-\- 필요없는 문구는 지우고 하고 싶은말 추가
+   필요시 멤버별로 분담률 가중치 입력
 
-\5. 결과를 공유한다
-\- 클립보드에 메시지 복사됨/카톡공유
+2. 결제내역을 입력한다
 
-\6. 왼쪽 사이드메뉴에서 자주 사용하는 그룹을 등록한다
-\- 동영상 광고 시청하고 새그룹 추가
+   결제자, 장소, 금액 입력 후 참석 멤버체크
 
+   총무 미지정시 결제금액이 많은 사람이 자동으로 총무가 됨
 
+3. 총무계좌번호를 입력한다
 
-**IDE & OPENSOURCE** 
+   총무는 오직 한명, 낼 돈을 총무에게 몰아줌
 
-Android Studio IDE ([LINK](https://developer.android.com/studio))
+   받을 돈이 있는 사람은 총무에게 환급받음
 
-com.google.firebase:firebase-database ([LICENSE](https://firebase.google.com/products/realtime-database))
+4. 더치페이 결과를 확인한다
 
-com.github.bumptech.glide:glide ([LICENSE](https://github.com/bumptech/glide/blob/master/LICENSE))
+   필요없는 문구는 지우고 하고 싶은말 추가
 
-com.squareup.okhttp3:okhttp ([LICENSE](https://github.com/square/okhttp/blob/master/LICENSE.txt))
+5. 결과를 공유한다
 
-com.google.code.gson:gson ([LICENSE](https://github.com/google/gson/blob/master/LICENSE))
+   클립보드에 메시지 복사됨/카톡공유
 
-org.jsoup:jsoup ([LICENSE](https://github.com/jhy/jsoup/blob/master/LICENSE))
+6. 왼쪽 사이드메뉴에서 자주 사용하는 그룹을 등록한다
 
-org.jetbrains.kotlin:kotlin-stdlib-jdk7 ([LICENSE](https://kotlinlang.org/))
+   동영상 광고 시청하고 새그룹 추가
+
+   
+
+개선할 점 메일로 보내주시면 답변 드리겠습니다.
+이용해 주셔서 감사합니다^^
