--- a/_posts/2021-08-22-fcpy.md
+++ b/_posts/2021-08-22-fcpy.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  플러터 프로젝트 재사용 방법 - Flutter copy project
+title:  "플러터 프로젝트 재사용 방법 - Flutter copy project"
 ---
 # Flutter copy project
 
