--- a/_posts/2021-08-22-fcpy.md
+++ b/_posts/2021-08-22-fcpy.md
@@ -1,22 +1,21 @@
 ---
 layout: single
-title:  "플러터 프로젝트 재사용 방법 - Flutter copy project"
+title:  "플러터 프로젝트 재사용 방법"
 ---
 # Flutter copy project
 
-
->Copy whole project to another. Enter the conversion keyword to convert it.
+>변환할 키워드를 이용하여 전체 프로젝트를 새로 만듭니다. 소스는 [Github](http://www.gstatic.com/webp/gallery/2.jpg) 을 참조하세요.
 <br>
 
-## How to copy flutter project
+## flutter 프로젝트 복사 방법
 ---
-**1. get this project to your folder**
+**1. 이 프로젝트를 폴더로 가져옵니다**
 ```
 git clone "https://github.com/enoosoft/flutter_copy_project.git"
 ```
 <br>
 
-**2. Run fcpy.dart in root directory with arguments**
+**2. 루트 디렉토리에서 아래와 같이 fcpy.dart 를 실행**
 ```
 dart bin/fcpy.dart --converter to-be.txt --source C:\Works\smmy --destination C:\Works\dmmy
 ```
@@ -24,19 +23,19 @@ dart bin/fcpy.dart --converter to-be.txt --source C:\Works\smmy --destination C:
 
  - **Arguments**
 
-Arguments|Example|Description
+Arguments|사용예|설명
 |--|--|--|
-converter|`to-be.txt`|Define conversion rules
-source|C:\Works\existing_project|Source template project folder
-destination|C:\Works\new_project|New project folder to create
+converter|`to-be.txt`|키워드 변환 규칙을 정의한다
+source|C:\Works\existing_project|원본 프로젝트 폴더
+destination|C:\Works\new_project|새로만들 프로젝트 폴더
 <br>
 
-- **How converter(`to-be.txt`) file works**
+- **converter(`to-be.txt`) 파일은 어떻게 동작할까**
 
-Basically, replace the keyword contained in the source file.<br> 
-Conversion rules are expressed as `before` -> `after`<br> 
-Define conversion rules what ever you need.<br> 
-eg. **`package name`**, **`app name`**, **`package directory`**, **`Admob IDs`**, etc.
+기본적으로, 키워드를 포함한 소스(text) 파일을 변환한다.<br> 
+변환 규칙들은 `before` -> `after` 형식으로 작성한다.<br>
+필요한 변환 규칙을 자유롭게 추가할수 있다.<br> 
+예를들면. **`package name`**, **`app name`**, **`package directory`**, **`Admob IDs`**, 등.
 
 ```
 # package name
@@ -58,13 +57,7 @@ ca-app-pub-ADMOBaXXX~XXXXXXXXXXXX->ca-app-pub-ad_app_id~XXXXXXXXXXXX
 ca-app-pub-ADMOBbXXX/XXXXXXXXXXXX->ca-app-pub-ad_banner_id~XXXXXXXXXXXX
 ca-app-pub-ADMOBcXXX/XXXXXXXXXXXX->ca-app-pub-ad_intstl_id~XXXXXXXXXXXX
  ```
-`package directory` converts and creates a folder structure that creates a directory with a package name, such as `Java`, `Kotlin`.
-
-## Updates
----
-
-* 0.0.1 
-  * Create project 2021-08-22
+`package directory` 를 변환할때는 패키지 폴더 구조를 복제할때 폴더명까지 변환된다. 패키지구조를 폴더구조로 사용하는 `Java`, `Kotlin` 을 사용한 프로젝트를 복사할때 사용한다.
 
 
 ## About
