--- a/_posts/2021-08-22-fcpy.md
+++ b/_posts/2021-08-22-fcpy.md
@@ -23,11 +23,11 @@ dart bin/fcpy.dart --converter to-be.txt --source C:\Works\smmy --destination C:
 
  - **Arguments**
 
-Arguments|사용예|설명
---|--|--
-converter|`to-be.txt`|키워드 변환 규칙을 정의한다
-source|C:\Works\existing_project|원본 프로젝트 폴더
-destination|C:\Works\new_project|새로만들 프로젝트 폴더
+|Arguments|사용예|설명|
+|--|--|--|
+|`converter`|`to-be.txt`|키워드 변환 규칙을 정의한다|
+|`source`|C:\Works\existing_project|원본 프로젝트 폴더|
+|`destination`|C:\Works\new_project|새로만들 프로젝트 폴더|
 <br>
 
 - **converter(`to-be.txt`) 파일은 어떻게 동작할까**
