--- a/_posts/2021-08-22-fcpy.md
+++ b/_posts/2021-08-22-fcpy.md
@@ -10,26 +10,26 @@ title:  "플러터 프로젝트 재사용 방법"
 ## flutter 프로젝트 복사 방법
 ---
 **1. 이 프로젝트를 폴더로 가져옵니다**
-```
+```bash
 git clone "https://github.com/enoosoft/flutter_copy_project.git"
 ```
 <br>
 
 **2. 루트 디렉토리에서 아래와 같이 fcpy.dart 를 실행**
-```
+```bash
 dart bin/fcpy.dart --converter to-be.txt --source C:\Works\smmy --destination C:\Works\dmmy
 ```
 <br>
-
- - **Arguments**
-
+  
+ - **Arguments**  
+  
 |Arguments|사용예|설명|
 |--|--|--|
 |`converter`|`to-be.txt`|키워드 변환 규칙을 정의한다|
 |`source`|C:\Works\existing_project|원본 프로젝트 폴더|
-|`destination`|C:\Works\new_project|새로만들 프로젝트 폴더|
-<br>
-
+|`destination`|C:\Works\new_project|새로만들 프로젝트 폴더|  
+  
+  
 - **converter(`to-be.txt`) 파일은 어떻게 동작할까**
 
 기본적으로, 키워드를 포함한 소스(text) 파일을 변환한다.<br> 
