--- a/_posts/2021-08-22-fcpy.md
+++ b/_posts/2021-08-22-fcpy.md
@@ -4,7 +4,7 @@ title:  "플러터 프로젝트 재사용 방법"
 ---
 # Flutter copy project
 
->변환할 키워드를 이용하여 전체 프로젝트를 새로 만듭니다. 소스는 [Github](http://www.gstatic.com/webp/gallery/2.jpg) 을 참조하세요.
+>변환할 키워드를 이용하여 전체 프로젝트를 새로 만듭니다. 소스는 [Github: Flutter copy project](https://github.com/enoosoft/flutter_copy_project) 을 참조하세요.
 <br>
 
 ## flutter 프로젝트 복사 방법
@@ -28,8 +28,9 @@ dart bin/fcpy.dart --converter to-be.txt --source C:\Works\smmy --destination C:
 |`converter`|`to-be.txt`|키워드 변환 규칙을 정의한다|
 |`source`|C:\Works\existing_project|원본 프로젝트 폴더|
 |`destination`|C:\Works\new_project|새로만들 프로젝트 폴더|  
-  
-  
+<br>
+
+
 - **converter(`to-be.txt`) 파일은 어떻게 동작할까**
 
 기본적으로, 키워드를 포함한 소스(text) 파일을 변환한다.<br> 
@@ -59,8 +60,10 @@ ca-app-pub-ADMOBcXXX/XXXXXXXXXXXX->ca-app-pub-ad_intstl_id~XXXXXXXXXXXX
 ```
 `package directory` 를 변환할때는 패키지 폴더 구조를 복제할때 폴더명까지 변환된다. 패키지구조를 폴더구조로 사용하는 `Java`, `Kotlin` 을 사용한 프로젝트를 복사할때 사용한다.
 
+<br>
 
-## About
+
+## 작성자
 ---
 
 * Developer: EnooSoft
