--- a/_posts/2021-08-22-fcpy.md
+++ b/_posts/2021-08-22-fcpy.md
@@ -33,10 +33,10 @@ dart bin/fcpy.dart --converter to-be.txt --source C:\Works\smmy --destination C:
 
 - **converter(`to-be.txt`) 파일은 어떻게 동작할까**
 
-기본적으로, 키워드를 포함한 소스(text) 파일을 변환한다.<br> 
-변환 규칙들은 `before` -> `after` 형식으로 작성한다.<br>
-필요한 변환 규칙을 자유롭게 추가할수 있다.<br> 
-예를들면. **`package name`**, **`app name`**, **`package directory`**, **`Admob IDs`**, 등.
+  - 기본적으로, 키워드를 포함한 소스(text) 파일을 변환한다.<br> 
+  - 변환 규칙들은 `before` -> `after` 형식으로 작성한다.<br>
+  - 필요한 변환 규칙을 자유롭게 추가할수 있다.<br> 
+  - 예를들면. **`package name`**, **`app name`**, **`package directory`**, **`Admob IDs`**, 등.
 
 ```
 # package name
